fix: imagenes añadidas a los productos del catalogo.
